refactor(domain): improve validations and structure in core domain entities